[build] Get rid of several warnings